<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ItemsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_1_cost"/>

        <EditText
            android:id="@+id/item1"
            android:layout_width ="match_parent"
            android:layout_height="50dp"
            android:inputType="number"
            android:importantForAutofill="no"
            android:background="@color/white"
            android:textColorHint="#595858"
            android:hint="@string/item_one_slot"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_2_cost"/>

        <EditText
            android:id="@+id/item2"
            android:layout_width ="match_parent"
            android:layout_height="50dp"
            android:inputType="number"
            android:importantForAutofill="no"
            android:background="@color/white"
            android:textColorHint="#595858"
            android:hint="@string/item_two_slot"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_3_cost"/>

        <EditText
            android:id="@+id/item3"
            android:layout_width ="match_parent"
            android:layout_height="50dp"
            android:inputType="number"
            android:importantForAutofill="no"
            android:background="@color/white"
            android:textColorHint="#595858"
            android:hint="@string/item_three_slot"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_4_cost"/>

        <EditText
            android:id="@+id/item4"
            android:layout_width ="match_parent"
            android:layout_height="50dp"
            android:inputType="number"
            android:importantForAutofill="no"
            android:background="@color/white"
            android:textColorHint="#595858"
            android:hint="@string/item_four_slot"/>

    </LinearLayout>

</ScrollView>